--- a/prs-client/src/app/classes/product/product-detail/product-detail.component.html
+++ b/prs-client/src/app/classes/product/product-detail/product-detail.component.html
@@ -1,1 +1,55 @@
 <app-menu></app-menu>
+<div>
+    <span id="pageTitle">Product Detail</span>
+    <table *ngIf="product" class="table table-sm">
+        <tr>
+            <th>Id:</th>
+            <td>
+                <input [(ngModel)]="product.id"type="number" readonly>
+            </td>
+        </tr>
+        <tr>
+            <th>Part Number:</th>
+            <td>
+                <input [(ngModel)]="product.partNbr"type="text" readonly>
+            </td>
+        </tr>
+        <tr>
+            <th>Name:</th>
+            <td>
+                <input [(ngModel)]="product.name"type="text">
+            </td>
+        </tr>
+        <tr>
+            <th>Price:</th> 
+            <td>
+                <input [(ngModel)]="product.price"type="number" >
+            </td>
+        </tr>
+        <tr>
+            <th>Unit:</th> 
+            <td>
+                <input [(ngModel)]="product.unit"type="number" >
+            </td>
+        </tr>
+        <tr>
+            <th>Vendor Id:</th> 
+            <td>
+                <input [(ngModel)]="product.vendor.id"type="number" readonly >
+            </td>
+        </tr>
+        <tr>
+            <th>Vendor Name:</th> 
+            <td>
+                <input [(ngModel)]="product.vendor.name"type="text" readonly>
+            </td>
+        </tr>
+        <th>Active:</th>
+    </table>
+    <div>
+        <button (click)="remove()" class="btn btn-danger">Delete</button>
+        <span *ngIf="showVerifyButton">
+            | <button (click) ="verifyRemove()" class="btn btn-danger">Verify Button</button>
+        </span>
+    </div>
+</div>
