--- a/prs-client/src/app/classes/request/request-list/request-list.component.html
+++ b/prs-client/src/app/classes/request/request-list/request-list.component.html
@@ -1,35 +1,38 @@
 <app-menu></app-menu>
-<div>
-    <span id="pageTitle">Request List</span> | 
-    <a routerLink="/request/create">New</a>
+<div class="component">
+<div class="header">
+    <span class="pagetitle">Request List</span> |
+    <span class="createlink">
+        <a routerLink="/requests/create">New</a>
+    </span>
+    <input class="search" [(ngModel)]="searchCriteria" type="text" placeholder="Search">
 </div>
-<table class="table table-sm">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Description</th>
-            <th>Status</th>
-            <th>Delivery Mode</th>
-            <th>Total</th>
-            <th>User</th>
-            <th>UserId</th>
-            <th>Actions</th>
+<div>
+    <table class="table table-sm">
+        <tr class="tableheader">
+            <td><a (click)="sortBy('id')">Id</a></td>
+            <td><a (click)="sortBy('status')">Status</a></td>
+            <td><a (click)="sortBy('user.username')">User</a></td>
+            <td><a (click)="sortBy('description')">Description</a></td>
+            <td><a (click)="sortBy('justification')">Justification</a></td>
+            <td><a (click)="sortBy('total')">Total</a></td>
+            <td>Modify</td>
         </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let r of requests">
-            <td>{{r.id}}</td>
-            <td>{{r.description}}</td>
-            <td>{{r.status}}</td>
-            <td>{{r.deliveryMode}}</td>
-            <td>{{r.total | currency}}</td>
-            <td>{{r.user.username}}</td>
-            <td>{{r.userId}}</td>
+        <tr *ngFor="let request of requests | searchRequest:searchCriteria | sort:sortCriteria">
+            <td>{{request.id}}</td>
             <td>
-                <a routerLink="/request/detail/{{r.id}}">Detail</a> |
-                <a routerLink="/request/edit/{{r.id}}">Edit</a> |
-                <a routerLink="request/{{r.id}}">Lines</a>
+                {{request.status}}
             </td>
-        </tr>
-    </tbody>
-</table>
+            <td>{{request.user.username}}</td>
+            <td>{{request.description}}</td>
+            <td>{{request.justification}}</td>
+            <td>{{request.total | currency}}</td>
+            <td>
+                <!-- <span class="actiondetail" -->
+                <!-- [hidden]="this.systemsvc._user!.isAdmin && this.systemsvc._user!.id != request.user.id"> -->
+                <a routerLink="/request/detail/{{request.id}}">Lines</a>
+                <a routerLink="/request/edit/{{request.id}}">Other</a>
+            <!-- </span> -->
+            </td>
+    </table>
+</div>
