almost finished, need to keep _user after mutiple uses AND build the review method inside of request/make it work on page

--- a/prs-client/src/app/classes/request/request-create/request-create.component.html
+++ b/prs-client/src/app/classes/request/request-create/request-create.component.html
@@ -16,7 +16,7 @@
         </tr>
         <tr>
           <td>User Id:</td>
-          <td><input [(ngModel)]="request.userId" type="number" disable></td>
+          <td>{{request.userId}}</td>
         </tr>
         <tr>
           <td>Description:</td>
