finished project for certification

--- a/prs-client/src/app/classes/product/product-detail/product-detail.component.html
+++ b/prs-client/src/app/classes/product/product-detail/product-detail.component.html
@@ -29,7 +29,7 @@
         <tr>
             <th>Unit:</th> 
             <td>
-                <input [(ngModel)]="product.unit"type="number" >
+                <input [(ngModel)]="product.unit"type="text" >
             </td>
         </tr>
         <tr>
