--- a/prs-client/src/app/classes/request/request-edit/request-edit.component.html
+++ b/prs-client/src/app/classes/request/request-edit/request-edit.component.html
@@ -55,7 +55,7 @@
     <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
     <button (click)="save()" class="btn btn-primary btn-sm">Save</button>
     <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <button (click)="delete()" [disabled]="verifyDelete" class="btn btn-danger btn-sm">Delete Request</button>
+    <button (click)="delete()" class="btn btn-danger btn-sm">Delete Request</button>
     <!-- <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
     <button (click)="confirmdel()" type="checkbox" (click)="verify()">Delete Request</button> -->
 </div>
