--- a/prs-client/src/app/classes/request/request-list/request-list.component.html
+++ b/prs-client/src/app/classes/request/request-list/request-list.component.html
@@ -29,7 +29,7 @@
                 <!-- <span class="actiondetail" -->
                 <!-- [hidden]="this.systemsvc._user!.isAdmin && this.systemsvc._user!.id != request.user.id"> -->
                 <a routerLink="/request/detail/{{request.id}}">Lines</a>
-                <a routerLink="/request/edit/{{request.id}}">Other</a>
+                <a routerLink="/requests/edit/{{request.id}}">Edit</a>
             <!-- </span> -->
             </td>
     </table>
