--- a/prs-client/src/app/classes/user/user-edit/user-edit.component.html
+++ b/prs-client/src/app/classes/user/user-edit/user-edit.component.html
@@ -1,7 +1,7 @@
 
 <app-menu></app-menu>
 <div>
-    <span id="pageTitle">Customer Change</span>
+    <span id="pageTitle">User Change</span>
     <table *ngIf="user" class="table table-sm">
         <tr>
             <th>Id:</th>
@@ -63,4 +63,3 @@
         
     </div>
 </div>
-<p>customer-detail works!</p>
